--- a/global/headerStyle.css
+++ b/global/headerStyle.css
@@ -1,62 +1,141 @@
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
+/* UTILITIES */
 
-.topnav {
-    overflow: hidden;
-    /* background-color: #1f1f1f; */
+.navbar * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.topnav a {
-    
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none !important;
-    font-size: 17px;
+.navbar a {
+    text-decoration: none;
 }
 
-.topnav a:hover {
-    background-color: #444444;
-    color: white;
+.navbar li {
+    list-style: none;
 }
 
-.topnav a.active {
-    background-color: #ff69b4;
-    color: white;
+
+/* NAVBAR STYLING STARTS */
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: black;
+    color: #fff;
 }
 
-.topnav .icon {
+.nav-links a {
+    color: #fff;
+}
+
+
+/* LOGO */
+.logo {
+    font-size: 32px;
+}
+
+
+/* NAVBAR MENU */
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+}
+
+.menu li:hover {
+    background-color: #41FF00;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.menu li {
+    padding: 5px 14px;  
+}
+
+
+/* DROPDOWN MENU */
+.dropdown-top {
+    position: relative; 
+}
+
+.dropdown {
+    background-color: black;
+    padding: 1em 0;
+    position: absolute; /*WITH RESPECT TO PARENT*/
     display: none;
+    border-radius: 8px;
+    top: 35px;
 }
 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-    
+.dropdown li + li {
+    margin-top: 10px;
 }
 
-@media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
+.dropdown li {
+    padding: 0.5em 1em;
+    width: 8em;
+    text-align: center;
+}
+
+.dropdown li:hover {
+    background-color: #41FF00;
+}
+
+.dropdown-top:hover .dropdown {
+    display: block;
+}
+
+
+/*RESPONSIVE NAVBAR MENU STARTS*/
+
+/* CHECKBOX HACK */
+
+input[type=checkbox]{
+    display: none;
+} 
+
+
+/*HAMBURGER MENU*/
+.hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+}
+
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+    .menu { 
+        display:none;
         position: absolute;
+        background-color:black;
         right: 0;
-        top: 0;
+        left: 0;
+        text-align: center;
+        padding: 16px 0;
     }
-    .topnav.responsive a {
-        float: none;
+    .menu li:hover {
+        display: inline-block;
+        background-color:#41FF00;
+        transition: 0.3s ease;
+    }
+    .menu li + li {
+        margin-top: 12px;
+    }
+    input[type=checkbox]:checked ~ .menu{
         display: block;
-        text-align: left;
     }
-    
-}
+    .hamburger {
+        display: block;
+    }
+    .dropdown {
+        left: 50%;
+        top: 30px;
+        transform: translateX(35%);
+    }
+    .dropdown li:hover {
+        background-color: #41FF00;
+    }
 
-.name{
-    float: right;
-    color: white;
-    font-weight: bold;
-    padding-right: 10px;
 }
