--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,5 +1,5 @@
 h1{
-    font-size: 900%;
+    font-size: 800%;
     text-align:center;
     color:white;
     font-weight:bolder;
@@ -16,12 +16,15 @@ h1{
 .links{
     padding-left:30%;
     padding-right:30%;
+    margin-left: auto;
+    margin-right:auto;
     display: flex;
     list-style: none;
 }
 
 li{
     margin: auto;
+    padding: 0 1em;
 }
 
 
@@ -38,13 +41,23 @@ li{
 
 /* MAKE PAGES RESPONSIVE */
 
+@media screen and (max-width:1600px){
+    .links{
+        padding-left:20%;
+        padding-right:20%;
+    }
+
+}
+
+
+
 @media screen and (max-width:600px){
     h1{
         font-size:600%;
     }
     .links{
-        padding-left:5px;
-        padding-right:5px;
+        padding-left:10px;
+        padding-right:10px;
     }
 
 }
